<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFAF7"
    android:id="@+id/relative">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="454dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/ic_one" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="19sp"
        android:paddingRight="19sp"
        android:text="@string/step_into_the_world_of_films_with_movievault"
        android:textColor="#1C120D"
        android:textSize="32sp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/image"/>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="19sp"
        android:paddingRight="19sp"
        android:paddingTop="10sp"
        android:text="@string/String2"
        android:textColor="#1C120D"
        android:textSize="18sp"
        android:fontFamily="@font/plus_jakarta_sans"
        android:textStyle="bold"
        android:layout_below="@id/textView1"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/FigmaProg1"
        android:text="@string/get_started"
        android:textColor="#1C120D"
        android:textSize="18sp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:layout_alignParentBottom="true"
        tools:ignore="VisualLintButtonSize" />


</RelativeLayout>