<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboardingFragment2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_App">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:contentDescription="@string/first_onboarding"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fragment2" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:paddingLeft="16dp"
        android:paddingTop="20dp"
        android:paddingRight="16dp"
        android:text="@string/Build_Your_Perfect_Collection"
        android:textColor="@color/textColor"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_sans"
        android:paddingLeft="16dp"
        android:paddingTop="4dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        android:text="@string/String3"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1" />

</androidx.constraintlayout.widget.ConstraintLayout>